--- a/package.json
+++ b/package.json
@@ -14,25 +14,19 @@
     "deploy": "vercel deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "fmt": "prettier --write .",
-    "fmt.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\"",
+    "lint": "biome check src",
+    "format": "biome format --write src",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.4",
     "@builder.io/qwik": "1.0.0",
     "@builder.io/qwik-city": "~1.0.0",
-    "@types/eslint": "8.37.0",
     "@types/node": "^18.16.0",
-    "@typescript-eslint/eslint-plugin": "5.59.1",
-    "@typescript-eslint/parser": "5.59.1",
     "autoprefixer": "^10.4.14",
-    "eslint": "8.39.0",
-    "eslint-plugin-qwik": "0.104.0",
     "postcss": "^8.4.23",
-    "prettier": "2.8.8",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.4",
     "undici": "5.22.0",
