--- a/package.json
+++ b/package.json
@@ -24,12 +24,7 @@
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "qwik": "qwik",
-    "test": "vitest",
-    "test.ui": "vitest --ui",
-    "test.coverage": "vitest --coverage",
-    "lighthouse": "lighthouse http://localhost:5173 --output html --output-path ./lighthouse-report.html",
-    "perf": "npm run build && npm run lighthouse",
-    "optimize": "npm run build.analyze && npm run perf"
+    "perf": "npm run build"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
@@ -44,12 +39,7 @@
     "vercel": "^28.19.0",
     "vite": "4.3.2",
     "vite-tsconfig-paths": "4.2.0",
-    "vitest": "^1.0.0",
-    "@vitest/ui": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "lighthouse": "^11.0.0",
-    "terser": "^5.24.0",
-    "rollup-plugin-visualizer": "^5.9.0"
+    "terser": "^5.24.0"
   },
   "dependencies": {
     "@builder.io/qwik": "1.0.0",
