🚨 FINAL NUCLEAR: Downgrade Qwik to stable version 0.20.0
- Downgraded @builder.io/qwik from 1.0.0 to 0.20.0
- Downgraded @builder.io/qwik-city from ~1.0.0 to ~0.20.0
- Simplified vite.config.ts back to basic configuration
- Reverted build script to simple 'qwik build'
- Qwik 1.0.0 appears to have build system bugs causing duplicate exports
- Testing with stable 0.20.0 version that should work reliably

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "private": true,
   "scripts": {
-    "build": "qwik build --mode production",
+    "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
@@ -28,8 +28,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
-    "@builder.io/qwik": "1.0.0",
-    "@builder.io/qwik-city": "~1.0.0",
+    "@builder.io/qwik": "0.20.0",
+    "@builder.io/qwik-city": "~0.20.0",
     "@types/node": "^20.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
@@ -42,8 +42,8 @@
     "terser": "^5.24.0"
   },
   "dependencies": {
-    "@builder.io/qwik": "1.0.0",
-    "@builder.io/qwik-city": "~1.0.0"
+    "@builder.io/qwik": "0.20.0",
+    "@builder.io/qwik-city": "~0.20.0"
   },
   "keywords": [
     "real-estate",
