--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "private": true,
   "scripts": {
-    "build": "qwik build",
+    "build": "qwik build --mode production --verbose",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
@@ -28,8 +28,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
-    "@builder.io/qwik": "0.20.0",
-    "@builder.io/qwik-city": "~0.20.0",
+    "@builder.io/qwik": "1.16.0",
+    "@builder.io/qwik-city": "1.16.0",
     "@types/node": "^20.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
@@ -37,13 +37,13 @@
     "typescript": "5.0.4",
     "undici": "5.22.0",
     "vercel": "^28.19.0",
-    "vite": "4.3.2",
+    "vite": "^5.0.0",
     "vite-tsconfig-paths": "4.2.0",
     "terser": "^5.24.0"
   },
   "dependencies": {
-    "@builder.io/qwik": "0.20.0",
-    "@builder.io/qwik-city": "~0.20.0"
+    "@builder.io/qwik": "1.16.0",
+    "@builder.io/qwik-city": "1.16.0"
   },
   "keywords": [
     "real-estate",
