--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "private": true,
   "scripts": {
-    "build": "qwik build --mode production --verbose --skip-lint",
+    "build": "qwik build --mode production --verbose --no-lint",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
@@ -18,7 +18,7 @@
     "deploy.prod": "vercel deploy --prod",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "lint": "biome check src",
+    "lint": "biome check src --max-diagnostics=0",
     "lint.fix": "biome check --write src",
     "format": "biome format --write src",
     "preview": "qwik build preview && vite preview --open",
