--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "pnpm run build",
-  "outputDirectory": "dist/server",
+  "outputDirectory": "dist",
   "installCommand": "pnpm install --frozen-lockfile",
   "headers": [
     {
