--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "qwik build --mode production --verbose",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
+    "build.server": "vite build -c adapters/static/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "build.analyze": "vite build --mode analyze",
     "deploy": "vercel deploy",
