🎯 SUCCESS: Static Site Generation Working!
✅ Generated 6 static pages successfully:
- Homepage (index.html)
- 55+ Communities Red Rock Canyon
- 55+ Communities
- Sitemap Test
- Homes for Sale Stonebridge Summerlin
- Real Estate

✅ Build completes without errors
✅ All SEO optimizations preserved
✅ Ready for Vercel deployment

Static generation approach bypasses all Edge Runtime issues.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "pnpm run build",
-  "outputDirectory": ".vercel/output",
+  "outputDirectory": "dist",
   "installCommand": "pnpm install --frozen-lockfile",
   "headers": [
     {
