--- a/package.json
+++ b/package.json
@@ -34,16 +34,17 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.1",
+    "terser": "^5.24.0",
     "typescript": "5.0.4",
     "undici": "5.22.0",
     "vercel": "^28.19.0",
     "vite": "^5.0.0",
-    "vite-tsconfig-paths": "4.2.0",
-    "terser": "^5.24.0"
+    "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
     "@builder.io/qwik": "1.16.0",
-    "@builder.io/qwik-city": "1.16.0"
+    "@builder.io/qwik-city": "1.16.0",
+    "@cerebras/cerebras_cloud_sdk": "^1.50.0"
   },
   "keywords": [
     "real-estate",
