--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,12 @@
   "buildCommand": "pnpm run build",
   "outputDirectory": "dist/client",
   "installCommand": "pnpm install --frozen-lockfile",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/$1"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
